# zebrito

./: .dockerignore  .env  .gitignore  Dockerfile  pyproject.toml
config/: insert-sample-ops.sql
scripts/: entrypoint.sh  install_gatling.sh
zebrito/: db.py  main.py  schemas.py  settings.py  views.py
