[tool.poetry]
name = "zebrito"
version = "0.1.0"
description = "Zebrito is zebrito"
authors = ["Isaque Alves <isaquealves@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.0"
pika = "^1.3.2"
psycopg2-pool = "^1.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg-pool = "^3.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
